Commit For new code...

--- a/service.html
+++ b/service.html
@@ -75,7 +75,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
         <a href="/" class="navbar-brand d-flex align-items-center border-end px-4 px-lg-5">
-            <h2 class="m-0 text-primary">Bhakti Solar Energy</h2>
+            <h2 class="m-0 text-primary">BSE</h2>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -243,7 +243,7 @@
 
 
     <!-- Testimonial Start -->
-   <div class="container-xxl py-5">
+<div class="container-xxl py-5">
     <div class="container">
         <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
             <h6 class="text-primary">Testimonial</h6>
@@ -252,46 +252,47 @@
         <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
             <div class="testimonial-item text-center">
                 <div class="testimonial-img position-relative">
-                    <img class="img-fluid rounded-circle mx-auto mb-5" src="img/testimonial-1.jpg">
+                    <img class="img-fluid rounded-circle mx-auto mb-5" src="https://www.shutterstock.com/image-photo/young-indian-male-blue-dress-600nw-2071805621.jpg">
                     <div class="btn-square bg-primary rounded-circle">
                         <i class="fa fa-quote-left text-white"></i>
                     </div>
                 </div>
                 <div class="testimonial-text text-center rounded p-4">
                     <p>"Bhakti Solar Energy provided an excellent solar panel installation for our home. Our electricity bills have reduced significantly, and we are extremely satisfied with the service and professionalism."</p>
-                    <h5 class="mb-1">Rajesh Sharma</h5>
+                    <h5 class="mb-1">Sarat Mohanty</h5>
                     <span class="fst-italic">Homeowner</span>
                 </div>
             </div>
             <div class="testimonial-item text-center">
                 <div class="testimonial-img position-relative">
-                    <img class="img-fluid rounded-circle mx-auto mb-5" src="img/testimonial-2.jpg">
+                    <img class="img-fluid rounded-circle mx-auto mb-5" src="https://p1.pxfuel.com/preview/979/283/752/rishi-gangoly-man-indian-professional-male-thinking-royalty-free-thumbnail.jpg">
                     <div class="btn-square bg-primary rounded-circle">
                         <i class="fa fa-quote-left text-white"></i>
                     </div>
                 </div>
                 <div class="testimonial-text text-center rounded p-4">
                     <p>"The team at Bhakti Solar Energy was very knowledgeable and guided us through every step of our solar installation. Their after-sales support is excellent, and we highly recommend them!"</p>
-                    <h5 class="mb-1">Priya Verma</h5>
+                    <h5 class="mb-1">Suchitra Das</h5>
                     <span class="fst-italic">Business Owner</span>
                 </div>
             </div>
             <div class="testimonial-item text-center">
                 <div class="testimonial-img position-relative">
-                    <img class="img-fluid rounded-circle mx-auto mb-5" src="img/testimonial-3.jpg">
+                    <img class="img-fluid rounded-circle mx-auto mb-5" src="https://t4.ftcdn.net/jpg/00/70/67/33/360_F_70673337_0wgkTTgozYhKMgBozFHJotukvlJEHzB7.jpg">
                     <div class="btn-square bg-primary rounded-circle">
                         <i class="fa fa-quote-left text-white"></i>
                     </div>
                 </div>
                 <div class="testimonial-text text-center rounded p-4">
                     <p>"Switching to solar energy with Bhakti Solar Energy was one of the best decisions for our factory. The system is efficient, and their team is always available for support. Great experience!"</p>
-                    <h5 class="mb-1">Amit Kumar</h5>
+                    <h5 class="mb-1">Debasish Pattnaik</h5>
                     <span class="fst-italic">Factory Owner</span>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
 
     <!-- Testimonial End -->
         
