--- a/feature.html
+++ b/feature.html
@@ -75,7 +75,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
         <a href="/" class="navbar-brand d-flex align-items-center border-end px-4 px-lg-5">
-            <h2 class="m-0 text-primary">Bhakti Solar Energy</h2>
+            <h2 class="m-0 text-primary">BSE</h2>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -121,7 +121,7 @@
 
 
     <!-- Feature Start -->
-  <div class="container-xxl py-5">
+   <div class="container-xxl py-5">
     <div class="container">
         <div class="row g-5">
             <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.1s">
@@ -129,7 +129,7 @@
                     <div class="btn-lg-square bg-primary rounded-circle me-3">
                         <i class="fa fa-users text-white"></i>
                     </div>
-                    <h1 class="mb-0" data-toggle="counter-up">3453</h1>
+                    <h1 class="mb-0" data-toggle="counter-up">485</h1>
                 </div>
                 <h5 class="mb-3">Happy Customers</h5>
                 <span>We take pride in delivering exceptional service, ensuring customer satisfaction and trust.</span>
@@ -139,7 +139,7 @@
                     <div class="btn-lg-square bg-primary rounded-circle me-3">
                         <i class="fa fa-check text-white"></i>
                     </div>
-                    <h1 class="mb-0" data-toggle="counter-up">4234</h1>
+                    <h1 class="mb-0" data-toggle="counter-up">532</h1>
                 </div>
                 <h5 class="mb-3">Projects Done</h5>
                 <span>Successfully completed thousands of projects, delivering quality and excellence every time.</span>
@@ -149,7 +149,7 @@
                     <div class="btn-lg-square bg-primary rounded-circle me-3">
                         <i class="fa fa-award text-white"></i>
                     </div>
-                    <h1 class="mb-0" data-toggle="counter-up">3123</h1>
+                    <h1 class="mb-0" data-toggle="counter-up">3</h1>
                 </div>
                 <h5 class="mb-3">Awards Won</h5>
                 <span>Recognized for excellence and innovation with numerous industry awards and accolades.</span>
@@ -159,7 +159,7 @@
                     <div class="btn-lg-square bg-primary rounded-circle me-3">
                         <i class="fa fa-users-cog text-white"></i>
                     </div>
-                    <h1 class="mb-0" data-toggle="counter-up">1831</h1>
+                    <h1 class="mb-0" data-toggle="counter-up">32</h1>
                 </div>
                 <h5 class="mb-3">Expert Workers</h5>
                 <span>Our highly skilled and dedicated professionals ensure the highest quality of work.</span>
