--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
         <a href="/" class="navbar-brand d-flex align-items-center border-end px-4 px-lg-5">
-            <h2 class="m-0 text-primary">BSE</h2>
+            <img class="img-fluid" src="img/Logo.png" alt="" style="width: 50px; height: 50px;">
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -118,86 +118,6 @@
         </div>
     </div>
     <!-- Page Header End -->
-
-
-    <!-- Feature Start -->
-  <div class="container-xxl py-5">
-    <div class="container">
-        <div class="row g-5">
-            <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.1s">
-                <div class="d-flex align-items-center mb-4">
-                    <div class="btn-lg-square bg-primary rounded-circle me-3">
-                        <i class="fa fa-users text-white"></i>
-                    </div>
-                    <h1 class="mb-0" data-toggle="counter-up">485</h1>
-                </div>
-                <h5 class="mb-3">Happy Customers</h5>
-                <span>We take pride in delivering exceptional service, ensuring customer satisfaction and trust.</span>
-            </div>
-            <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.3s">
-                <div class="d-flex align-items-center mb-4">
-                    <div class="btn-lg-square bg-primary rounded-circle me-3">
-                        <i class="fa fa-check text-white"></i>
-                    </div>
-                    <h1 class="mb-0" data-toggle="counter-up">532</h1>
-                </div>
-                <h5 class="mb-3">Projects Done</h5>
-                <span>Successfully completed thousands of projects, delivering quality and excellence every time.</span>
-            </div>
-            <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.5s">
-                <div class="d-flex align-items-center mb-4">
-                    <div class="btn-lg-square bg-primary rounded-circle me-3">
-                        <i class="fa fa-award text-white"></i>
-                    </div>
-                    <h1 class="mb-0" data-toggle="counter-up">3</h1>
-                </div>
-                <h5 class="mb-3">Awards Won</h5>
-                <span>Recognized for excellence and innovation with numerous industry awards and accolades.</span>
-            </div>
-            <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.7s">
-                <div class="d-flex align-items-center mb-4">
-                    <div class="btn-lg-square bg-primary rounded-circle me-3">
-                        <i class="fa fa-users-cog text-white"></i>
-                    </div>
-                    <h1 class="mb-0" data-toggle="counter-up">32</h1>
-                </div>
-                <h5 class="mb-3">Expert Workers</h5>
-                <span>Our highly skilled and dedicated professionals ensure the highest quality of work.</span>
-            </div>
-        </div>
-    </div>
-</div>
-
-    <!-- Feature Start -->
-    
-
-    <!-- About Start -->
-  <div class="container-fluid bg-light overflow-hidden my-5 px-lg-0">
-    <div class="container about px-lg-0">
-        <div class="row g-0 mx-lg-0">
-            <div class="col-lg-6 ps-lg-0 wow fadeIn" data-wow-delay="0.1s" style="min-height: 400px;">
-                <div class="position-relative h-100">
-                    <img class="position-absolute img-fluid w-100 h-100" src="img/about.jpg" style="object-fit: cover;" alt="">
-                </div>
-            </div>
-            <div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
-                <div class="p-lg-5 pe-lg-0">
-                    <h6 class="text-primary">About Us</h6>
-                    <h1 class="mb-4">6+ Years Experience In Solar & Renewable Energy Industry</h1>
-                    <p>At Bhakti Solar Energy, we are committed to harnessing the power of the sun to create a cleaner and more sustainable future. As a government-certified company, we specialize in designing and installing advanced solar solutions tailored to the needs of residential, commercial, and industrial sectors. Our mission is to make renewable energy affordable and accessible, reducing dependency on conventional power sources while promoting environmental responsibility.</p>
-                    <p><i class="fa fa-check-circle text-primary me-3"></i>Government-certified solar energy solutions</p>
-                    <p><i class="fa fa-check-circle text-primary me-3"></i>Customized installations for homes, businesses & industries</p>
-                    <p><i class="fa fa-check-circle text-primary me-3"></i>Commitment to sustainability & cost efficiency</p>
-                    <a href="" class="btn btn-primary rounded-pill py-3 px-5 mt-3">Explore More</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-    <!-- About End -->
-
-
 
 
 
@@ -336,6 +256,56 @@
                     </div>
                 </div>
             </div>
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="team-item rounded overflow-hidden">
+                        <div class="d-flex">
+                            <img class="img-fluid w-75" src="img/user4.jpeg" alt="" style="max-height: 300px;">
+                            <div class="team-social w-25">
+                                <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-instagram"></i></a>
+                            </div>
+                        </div>
+                        <div class="p-4">
+                            <h5>Rasmita Maharana</h5>
+                            <span>Tele Sales Executive</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="team-item rounded overflow-hidden">
+                        <div class="d-flex">
+                            <img class="img-fluid w-75" src="img/user5.jpeg" alt="" style="max-height: 300px;">
+                            <div class="team-social w-25">
+                                <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-instagram"></i></a>
+                            </div>
+                        </div>
+                        <div class="p-4">
+                            <h5>Mahima Ranjan Rout</h5>
+                            <span>Business Development Manage</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="team-item rounded overflow-hidden">
+                        <div class="d-flex">
+                            <img class="img-fluid w-75" src="img/user6.jpeg" alt="" style="max-height: 300px;">
+                            <div class="team-social w-25">
+                                <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-instagram"></i></a>
+                            </div>
+                        </div>
+                        <div class="p-4">
+                            <h5>Sribatsha Barik</h5>
+                            <span>Technical Head</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <!-- Team End -->
@@ -362,7 +332,7 @@
                     <a class="btn btn-link" href="about.html">About Us</a>
                     <a class="btn btn-link" href="contact.html">Contact Us</a>
                     <a class="btn btn-link" href="service.html">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
+                    <a class="btn btn-link" href="termsandcondition.html">Terms & Condition</a>
                 </div>
                <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Project Gallery</h5>
@@ -417,7 +387,11 @@
 
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
+     <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
+
+    <a href="https://wa.me/9692097145" target="_blank" class="btn btn-lg btn-primary btn-lg-square rounded-circle whatsapp-icon">
+        <i class="bi bi-whatsapp"></i>
+    </a>
 
 
     <!-- JavaScript Libraries -->
