Commit For new code

--- a/project.html
+++ b/project.html
@@ -215,9 +215,10 @@
                                 <div class="col-12 col-sm-6">
                                     <select class="form-select border-0" style="height: 55px;">
                                         <option selected>Select A Service</option>
-                                        <option value="1">Service 1</option>
-                                        <option value="2">Service 2</option>
-                                        <option value="3">Service 3</option>
+                                        <option value="1">On-Grid</option>
+                                        <option value="2">Off-Grid</option>
+                                        <option value="3">Hybrid</option>
+                                        <option value="3">Solar Pump</option>
                                     </select>
                                 </div>
                                 <div class="col-12">
