Commit For new code...

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <small class="far fa-clock text-primary me-2"></small>
-                    <small>Mon - Fri : 09.00 AM - 09.00 PM</small>
+                    <small>Mon - Sat : 09.30 AM - 06.30 PM</small>
                 </div>
             </div>
             <div class="col-lg-5 px-5 text-end">
@@ -120,7 +120,7 @@
                                 <p class="fs-5 fw-medium text-white mb-4 pb-3">
                                     Harnessing the power of the sun for a cleaner, greener, and sustainable tomorrow.
                                 </p>
-                                <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Learn More</a>
+                                <!-- <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Learn More</a> -->
                             </div>
                         </div>
                     </div>
@@ -136,7 +136,7 @@
                                 <p class="fs-5 fw-medium text-white mb-4 pb-3">
                                     Bhakti Solar Energy offers innovative and cost-effective solar power solutions for homes and businesses.
                                 </p>
-                                <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Discover More</a>
+                                <!-- <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Discover More</a> -->
                             </div>
                         </div>
                     </div>
@@ -152,7 +152,7 @@
                                 <p class="fs-5 fw-medium text-white mb-4 pb-3">
                                     Take a step towards a sustainable future with our high-efficiency solar panels and energy solutions.
                                 </p>
-                                <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Get Started</a>
+                                <!-- <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Get Started</a> -->
                             </div>
                         </div>
                     </div>
@@ -443,14 +443,14 @@
                         </div>
                     </div>
                 </div>
-                 <div class="col-lg-3 col-md-6">
+                 <!-- <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Newsletter</h5>
                     <p>Stay updated with the latest solar energy solutions, offers, and innovations from Bhakti Solar Energy. Subscribe to our newsletter and never miss an update!</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
                         <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="container">
