Commit For new code.

--- a/contact.html
+++ b/contact.html
@@ -144,7 +144,13 @@
                                         <label for="email">Your Email</label>
                                     </div>
                                 </div>
-                                <div class="col-12">
+                                <div class="col-md-6">
+                                    <div class="form-floating">
+                                        <input type="number" class="form-control" id="mobile" placeholder="Your Mobile Number">
+                                        <label for="mobile">Your Mobile Number</label>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
                                     <div class="form-floating">
                                         <input type="text" class="form-control" id="subject" placeholder="Subject">
                                         <label for="subject">Subject</label>
