--- a/contact.html
+++ b/contact.html
@@ -98,6 +98,8 @@
                 </div> -->
                 <a href="contact.html" class="nav-item nav-link active">Contact</a>
             </div>
+            <a href="https://dilipsahoo100.github.io/Solar-Calculator/Dashboard.html" class="btn btn-success rounded-0 py-4 px-lg-5">CRM Login<i class="fa fa-arrow-right ms-3"></i></a>
+
              <a href="https://mybillbook.in/store/bhakti_solar_energy" class="btn btn-primary rounded-0 py-4 px-lg-5">Get A Quote<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
