--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
 
             </div>
-            <a href="https://mybillbook.in/store/bhakti_solar_energy" class="btn btn-primary rounded-0 py-4 px-lg-5">Get A Quote<i class="fa fa-arrow-right ms-3"></i></a>
+            <a href="https://dilipsahoo100.github.io/Solar-Calculator/Dashboard.html" class="btn btn-primary rounded-0 py-4 px-lg-5">CRM Login<i class="fa fa-arrow-right ms-3"></i></a>
+            <a href="https://mybillbook.in/store/bhakti_solar_energy" class="btn btn-success rounded-0 py-4 px-lg-5">Get A Quote<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
     <!-- Navbar End -->
