--- a/about.html
+++ b/about.html
@@ -225,10 +225,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                <!-- <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item rounded overflow-hidden">
                         <div class="d-flex">
-                            <!-- <img class="img-fluid w-75" src="img/user2.jpeg" alt="" style="max-height: 300px;"> -->
+                            <img class="img-fluid w-75" src="img/user2.jpeg" alt="" style="max-height: 300px;">
                             <div class="team-social w-25">
                                 <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-twitter"></i></a>
@@ -240,7 +240,7 @@
                             <span>Branch Head</span>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item rounded overflow-hidden">
                         <div class="d-flex">
@@ -271,7 +271,7 @@
                         </div>
                         <div class="p-4">
                             <h5>Rasmita Maharana</h5>
-                            <span>Tele Sales Executive</span>
+                            <span>Sales Manager</span>
                         </div>
                     </div>
                 </div>
@@ -321,7 +321,7 @@
                     <h5 class="text-white mb-4">Address</h5>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>HIG/42, Aryapalli, Patia, Bhubaneswar, Odisha 751024, India</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 91243 18222</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@bhaktisolarenergy.in</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>solarbee.bbsr@gmail.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-outline-light btn-social" href="https://www.facebook.com/share/1Bg3ibnjHD/?mibextid=wwXIfr"><i class="fab fa-facebook-f"></i></a>
