--- a/about.html
+++ b/about.html
@@ -258,7 +258,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row g-4">
+            <!-- <div class="row g-4"> -->
                 <!-- <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item rounded overflow-hidden">
                         <div class="d-flex">
