--- a/quote.html
+++ b/quote.html
@@ -61,9 +61,9 @@
                     <small>+91 91243 18222</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center mx-n2">
-                    <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href="https://www.facebook.com/share/1Bg3ibnjHD/?mibextid=wwXIfr"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href="https://www.instagram.com/bhaktisolareenergy?igsh=d2xteWhnZjZsam1h"><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href="https://www.facebook.com/profile.php?id=61576780145404"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href="https://www.linkedin.com/in/pragati-ecosolar-5a61ba387"><i class="fab fa-linkedin"></i></a>
+                    <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href="https://www.instagram.com/pragati_ecosolar/"><i class="fab fa-instagram"></i></a>
                     
                 </div>
             </div>
@@ -181,10 +181,10 @@
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 91243 18222</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>solarbee.bbsr@gmail.com</p>
                     <div class="d-flex pt-2">
-                        <a class="btn btn-square btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square btn-outline-light btn-social" href="https://www.facebook.com/share/1Bg3ibnjHD/?mibextid=wwXIfr"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square btn-outline-light btn-social" href="https://youtube.com/@bhaktisolarenergy?si=Z_2hh_d-71xMjD6x"><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-square btn-outline-light btn-social" href="https://www.instagram.com/bhaktisolareenergy?igsh=d2xteWhnZjZsam1h"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-square btn-outline-light btn-social" href="https://x.com/PEcosolar"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-square btn-outline-light btn-social" href="https://www.facebook.com/profile.php?id=61576780145404"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-square btn-outline-light btn-social" href="https://www.youtube.com/@PragatiEcosolar"><i class="fab fa-youtube"></i></a>
+                        <a class="btn btn-square btn-outline-light btn-social" href="https://www.instagram.com/pragati_ecosolar/"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
