--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     </div>
                 </div>
             </div>
-            <div class="owl-carousel-item position-relative" data-dot="img/Why-Securitisation-of-Solar-Assets-is-the-Game-Changer-Kenya-Needs-to-Accelerate-the-Green-Movement.jpg'>">
+            <div class="owl-carousel-item position-relative" data-dot="img/Why-Securitisation-of-Solar-Assets-is-the-Game-Changer-Kenya-Needs-to-Accelerate-the-Green-Movement.jpg">
                 <img class="img-fluid" src="img/Why-Securitisation-of-Solar-Assets-is-the-Game-Changer-Kenya-Needs-to-Accelerate-the-Green-Movement.jpg" alt="">
                 <div class="owl-carousel-inner">
                     <div class="container">
@@ -143,7 +143,7 @@
                     </div>
                 </div>
             </div>
-            <div class="owl-carousel-item position-relative" data-dot="img/panels-electricity-order-sunlight.jpg'>">
+            <div class="owl-carousel-item position-relative" data-dot="img/panels-electricity-order-sunlight.jpg">
                 <img class="img-fluid" src="img/panels-electricity-order-sunlight.jpg" alt="">
                 <div class="owl-carousel-inner">
                     <div class="container">
