--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     </div>
                 </div>
             </div>
-            <div class="owl-carousel-item position-relative" data-dot="<img src='img/panels-electricity-order-sunlight.jpg'>'>
+            <div class="owl-carousel-item position-relative" data-dot="<img src='img/panels-electricity-order-sunlight.jpg'>">
                 <img class="img-fluid" src="img/panels-electricity-order-sunlight.jpg" alt="">
                 <div class="owl-carousel-inner">
                     <div class="container">
