--- a/about.html
+++ b/about.html
@@ -258,8 +258,9 @@
                     </div>
                 </div>
             </div>
+            <!--  -->
             <!-- <div class="row g-4"> -->
-                <!-- <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item rounded overflow-hidden">
                         <div class="d-flex">
                             <img class="img-fluid w-75" src="img/user4.jpeg" alt="" style="max-height: 300px;">
@@ -274,8 +275,8 @@
                             <span>Sales Manager</span>
                         </div>
                     </div>
-                </div> -->
-                <!-- <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item rounded overflow-hidden">
                         <div class="d-flex">
                             <img class="img-fluid w-75" src="img/user5.jpeg" alt="" style="max-height: 300px;">
@@ -290,8 +291,8 @@
                             <span>Business Development Manager</span>
                         </div>
                     </div>
-                </div> -->
-                <!-- <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item rounded overflow-hidden">
                         <div class="d-flex">
                             <img class="img-fluid w-75" src="img/user6.jpeg" alt="" style="max-height: 300px;">
@@ -306,7 +307,7 @@
                             <span>Technical Head</span>
                         </div>
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
     </div>
