--- a/branch.html
+++ b/branch.html
@@ -98,7 +98,7 @@
                     </div>
                 </div> -->
                 <a href="branch.html" class="nav-item nav-link active">Our Branch</a>
-                <a href="contact.html" class="nav-item nav-link active">Contact</a>
+      
             </div>
             <a href="https://dilipsahoo100.github.io/Solar-Calculator/Dashboard.html" class="btn btn-success rounded-0 py-4 px-lg-5">CRM Login<i class="fa fa-arrow-right ms-3"></i></a>
 
@@ -176,10 +176,50 @@
                 <div class="col-lg-6 pe-lg-0" style="min-height: 400px;">
                     <div class="position-relative h-100">
 
-                        <iframe class="position-absolute w-100 h-100" style="object-fit: cover;"
-                        src="https://www.google.com/maps/embed?pb=!1m19!1m8!1m3!1d119745.21931274282!2d85.7229388!3d20.2986899!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x3a19a783d34a16d3%3A0x935388f8f198cd07!2s3%2F182%2C%20IRC%20Village%2C%20Road%201%2C%20Nilakantha%20Nagar%2C%20Nayapalli%2C%20Bhubaneswar%2C%20Odisha%20751015!3m2!1d20.298709199999998!2d85.8053405!5e0!3m2!1sen!2sin!4v1742651459801!5m2!1sen!2sin"
-                        frameborder="0" allowfullscreen="" aria-hidden="false"
-                        tabindex="0"></iframe>
+                       <div class="col-lg-6 pe-lg-0 bg-white">
+    <div class="h-100 d-flex align-items-center">
+        <div class="p-5">
+
+            <h6 class="text-primary">Our Branches</h6>
+            <h1 class="mb-4">Pragati EcoSolar</h1>
+
+            <!-- Branch 1 -->
+            <div class="mb-4">
+                <h5 class="text-dark mb-1">1. BDM: Pratap Dutta</h5>
+
+                <p class="mb-1"><strong>(A) Kalahandi:</strong></p>
+                <ul class="mb-2">
+                    <li>Mrampur – 766102</li>
+                    <li>Junagarh – 766014</li>
+                </ul>
+
+                <p class="mb-1"><strong>(B) Cuttack:</strong></p>
+                <ul class="mb-2">
+                    <li>Bissam – 765019</li>
+                </ul>
+            </div>
+
+            <!-- Branch 2 -->
+            <div class="mb-4">
+                <h5 class="text-dark mb-1">2. BDM: Prakash Dash</h5>
+
+                <p class="mb-1"><strong>(A) Jajpur:</strong></p>
+                <ul class="mb-2">
+                    <li>Mangalpur – 755011</li>
+                </ul>
+            </div>
+
+            <!-- Contact Numbers -->
+            <div class="mt-4">
+                <h6 class="text-primary">Contact Numbers</h6>
+                <p class="mb-1">📞 <strong>9124619222</strong></p>
+                <p class="mb-0">📞 <strong>9124318222</strong></p>
+            </div>
+
+        </div>
+    </div>
+</div>
+
                     </div>
                 </div>
             </div>
